@@ -2,17 +2,21 @@
 package memorymanagement;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 
 public class PCB {
-    private ArrayList <Process> ready = new ArrayList<>();
-    private ArrayList <Process> running = new ArrayList<>();
-    private ArrayList <Process> terminated = new ArrayList<>();
+    public LinkedList <Process> ready = new LinkedList<Process>();
+    public LinkedList <Process> running = new LinkedList<Process>();
+    public LinkedList <Process> terminated = new LinkedList<Process>();
     
     public void addProcess(Process process)
     {
         if (process.getPriority() == 5)
         {
-            ready.add(0, process);
+            /*for (int i = 0; i<ready.size(); i++){
+                ready.set(i+1, ready.get(i));
+            }*/
+            ready.addFirst(process);
         }
         ready.add(process);
     }
@@ -21,15 +25,24 @@ public class PCB {
     {   
         if (queue == 0)
         {
-            return ready.get(0);
+            if (ready.isEmpty()){
+                return null;
+            }
+            return ready.getFirst();
         }
         if (queue == 1)
         {
-            return running.get(0);
+            if (running.isEmpty()){
+                return null;
+            }
+            return running.getFirst();
         }
         if (queue == 2)
         {
-            return terminated.get(0);
+            if (terminated.isEmpty()){
+                return null;
+            }
+            return terminated.getFirst();
         }
         return null;
     }
@@ -60,6 +73,41 @@ public class PCB {
             terminated.add(process);
             running.remove(process);
             process.setQueue(setQueue);
+        }
+    }
+    
+    public String toString(){
+                
+        return terminated.toString();
+    }
+    
+    public void printerReady(){
+        for (Process p:ready){
+            System.out.println("ID: "+p.getId());
+            System.out.println("MemSize: "+p.getMemSize());
+            System.out.println("Priority: "+p.getPriority());
+            System.out.println("Queue: "+p.getQueue());
+            System.out.println("TimeExec: "+p.getExecTime());
+        }
+    }
+    
+    public void printerRunning(){
+        for (Process p:running){
+            System.out.println("ID: "+p.getId());
+            System.out.println("MemSize: "+p.getMemSize());
+            System.out.println("Priority: "+p.getPriority());
+            System.out.println("Queue: "+p.getQueue());
+            System.out.println("TimeExec: "+p.getExecTime());
+        }
+    }
+    
+    public void printerTerminated(){
+        for (Process p:terminated){
+            System.out.println("ID: "+p.getId());
+            System.out.println("MemSize: "+p.getMemSize());
+            System.out.println("Priority: "+p.getPriority());
+            System.out.println("Queue: "+p.getQueue());
+            System.out.println("TimeExec: "+p.getExecTime());
         }
     }
 }
